[package]
name = "bulu"
version = "0.1.0"
edition = "2021"
authors = ["Bulu Language Team"]
description = "The Bulu programming language interpreter and compiler"
license = "MIT"
repository = "https://github.com/bulu-lang/bulu"
keywords = ["programming-language", "interpreter", "compiler", "concurrency"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "langc"
path = "src/bin/langc.rs"

[[bin]]
name = "lang"
path = "src/bin/lang.rs"

[[bin]]
name = "bulu"
path = "src/bin/bulu_vm.rs"

[[bin]]
name = "bulu_run"
path = "src/bin/bulu_run.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
num_cpus = "1.0"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
# Cryptography dependencies
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
# Package management dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
sha256 = "1.0"
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true